--- a/queries.css
+++ b/queries.css
@@ -64,3 +64,33 @@
     margin-left: 7px;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  .between {
+    left: 60%;
+  }
+
+  .score,
+  .highscore,
+  .message,
+  .check {
+    font-size: 90%;
+  }
+
+  .message {
+    white-space: normal;
+    margin-left: 9px;
+  }
+
+  .input-number {
+    width: 160px;
+    height: 80px;
+    font-size: 200%;
+    margin-left: 9px;
+  }
+
+  .number {
+    font-size: 280%;
+    padding: 25px 35px;
+  }
+}
